--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -46,5 +46,6 @@
 \input{thesis/formal.tex}
 \input{thesis/method.tex}
 \input{thesis/result.tex}
+\input{thesis/discussion.tex}
 \printbibliography
 \end{document}
