--- a/thesis/method.tex
+++ b/thesis/method.tex
@@ -1,8 +1,9 @@
 \section{Method}
+\label{method}
 
 The methodology used is standard procedure in the domain of computational complexity. At first we examine how easy it is to verify a given solution to our problem, which will tell us if the problem lies in NP. We will then try to find a suitable known NP-complete problem and reduce it to our problem, which in turn will tell us if the problem is NP-hard. If both these conditions are satisfied, it follows from definition that the problem is NP-complete. A brief review of this terminology is provided in \textbf{todo:background}.
 
 \subsection{Finding a reduction}
 As mentioned in \ref{subsub:sim} there exists many similarities between Lumines and the more thoroughly researched video game Tetris. This fact suggested that is was a good idea to draw inspiration from papers concerning the computational complexity of Tetris. In one such paper by \citeauthor{tetris}, the authors present a reduction from \textit{3-Partition} to the problem of how many rows can be cleared using some sequence of Tetris pieces (for more information see \cite{tetris}). Although we considered a proof of similar completeness to be out of the scope of this report, we were inspired by the notion of forcing game pieces to be placed in certain positions by creating a precise initial gameboard and limiting the sequence of game pieces to fewer kinds. The forced placement of a game pieces in turn forces the placement of the next game piece and so on. In the case of the reduction found in the Tetris paper, the height of this predetermined stack of game pieces determines how many rows of the gameboard that can be cleared.
 
-When looking for a suitable problem to reduce to our problem, we focused on the NP-hard problems we had priorly encountered in literature and courses. We then examined whether a problem would fit nicely in this characteristic of forced placement and game piece stacking. We finally decided to turn our attention to the \textit{Subset sum} problem, which was both fairly well understood by us and seemed to have a simple mapping from some parts of a problem instance to some parts of our problem instances. For example it seemed plausible that a set elements $n$ in a \textit{Subset sum} instance could be mapped to $n$ Lumines blocks of the same kind in a sequence, and the additive characteristic of elements in a \textit{Subset sum} instance seemed like a good match for the stacking characteristic of Lumines gameplay.
+When searching for a suitable problem for the reduction, we focused on the NP-hard problems we had priorly encountered in literature and courses. We then examined whether a problem would fit nicely in this characteristic of forced placement and game piece stacking. We finally decided to turn our attention to the \textit{Subset sum} problem, which was both fairly well understood by us and seemed to have a simple mapping from some parts of a problem instance to some parts of our problem instances. For example it seemed plausible that a set elements $n$ in a \textit{Subset sum} instance could be mapped to $n$ Lumines blocks of the same kind in a sequence, and the additive characteristic of elements in a \textit{Subset sum} instance seemed like a good match for the stacking characteristic of Lumines gameplay.
