table of contents and stuff

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -41,6 +41,9 @@
 \iaddress{\caddress}
 \makeititle
 
+\tableofcontents
+\newpage
+
 \input{thesis/introduction.tex}
 \input{thesis/background.tex}
 \input{thesis/formal.tex}
