--- a/thesis/formal.tex
+++ b/thesis/formal.tex
@@ -1,4 +1,6 @@
 \subsection{Formal definitions}
+\label{sub:formal}
+
 This formalization of Lumines roughly follows the methodology of \citeauthor{tetris} in their paper on the computational complexity of Tetris \cite{tetris}. Please note that the formalization corresponds to the simplified model of Lumines considered in this report, rather than the actual video game. With this in mind, in this section `Lumines' should be read as `Lumines with the constraints and modifications this report assumes'.
 
 \begin{description}[style=unboxed, leftmargin=0cm,labelsep=1em]
@@ -43,21 +45,21 @@ In the \textit{initial block state}, the block is in its base orientation unless
         \item A \emph{fix}. If the cells $\langle i-1, j \rangle$ or $\langle i-1, j+1 \rangle$ are filled or $i=1$ the move is legal. The new block state is $(\mathbf{c}, \langle i, j \rangle, fixed)$.
     \end{enumerate}
 
-\item[Playing the game] A \textit{trajectory} $\tau$ of a block $P$ is a sequence of (legal) game moves starting from the initial block state and ending with a fix move. The application of a trajectory on a block $P$ in a gameboard $B$ renders a new gameboard $B'$ according to the following rules:
+\item[Playing the game] A \textit{trajectory} $\tau$ of a block $P$ is a sequence of (legal) game moves starting from the initial block state and ending with a fix operation. The application of a trajectory to a block $P$ in a gameboard $B$ renders a new gameboard $B'$ according to the following rules:
 
     \begin{enumerate}
             \item $B'$ is initially $B$ with the cells of block $P$ filled.
             \item If the block is fixed, any column of the block which is not directly above a filled cell will continue to drop until it reaches either a filled cell or the bottom row. $B'$ is the result of this fix operation.
-            \item If the block is fixed and the block state is $(m-1, j)$, any $j \in \{1, \ldots, n\}$, a \textit{game over} is triggered.
-            \item If any filled cell $(i,j)$ in $B'$ and its surrounding cells $(i+1,j+1)$, $(i, j+1)$ and $(i+1, j)$ are the same color, these cells are marked and cleared instantly. Any filled cells in $B'$ not directly above other filled cells or the bottom row now drops until they are. This stage is repeated until a further step would not result in any changes on the gameboard. $B'$ is now the results of these steps.
+            \item If the block is fixed and the block position is $\langle m-1, j\rangle$, any $j \in \{1, \ldots, n-1\}$, a \textit{game over} is triggered.
+            \item If any filled cell $\langle i,j \rangle$ in $B'$ and its surrounding cells $\langle i+1,j+1 \rangle$, $\langle i, j+1 \rangle$ and $\langle i+1, j \rangle$ are the same color, these cells are marked and cleared instantly. Any filled cells in $B'$ not directly above other filled cells or the bottom row now drops until they are. This stage is repeated until a further step would not result in any changes on the gameboard. $B'$ is now the results of these steps.
     \end{enumerate}
 
     A \textit{game} $(B_0, P_1, \ldots, P_p)$ is defined as an initial gameboard and a sequence of blocks to be placed by the player. A \textit{trajectory sequence} $\phi$ is a sequence $(B_0, \tau_1, B_1, \ldots ,\tau_p, B_p)$ which for each $i$ the trajectory $\tau_i$ applied to the game block $P_i$ on the gameboard $B_{i-1}$ results in gameboard $B_i$. If $\phi$ contains any trajectory $\tau_q$ which triggers a game over, $\phi$ naturally terminates at $B_q$ instead of $B_p$.
     \end{description}
 
 \subsubsection{The k-cleared-cells problem}
-The main Lumines goal this paper is concerned with is the problem of maximizing the amount of cleared cells in a particular Lumines game. This problem is formulated as a decision problem in the formal system as follows:
+The main Lumines goal this paper is concerned with is the problem of maximizing the amount of cleared cells given a particular game. Naturally the domain of the problem is the simplified version of Lumines previously presented in~\ref{sub:formal}. The problem is formulated as a decision problem in this domain as follows:
 
 \begin{quote}
-    \textbf{The k-cleared-cells problem}: Given a Lumines game $G$ and a goal $C \in \mathbb{N}$, does there exist a trajectory sequence $\phi$ such that when $\phi$ is applied to $G$, at least $C$ cells are cleared in total?
+    \textbf{The (offline, no-rotation) k-cleared-cells problem}: Given a Lumines game $G$ and a goal $C \in \mathbb{N}$, does there exist a trajectory sequence $\phi$ such that when $\phi$ is applied to $G$, at least $C$ cells are cleared in total?
 \end{quote}
