--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -1,5 +1,5 @@
 \section{Background}
-
+\label{sec:background}
 
 \subsection{Lumines}
 The video game Lumines was released in December 2004 in Japan for the PSP platform. The game was a major success for the developer Q Entertainment, and has since its original release been followed with a couple of sequels \cite{wiki:lumines}.
