--- a/thesis/result.tex
+++ b/thesis/result.tex
@@ -1,4 +1,4 @@
-\subsection{Result}
+\section{Result}
 \textit{This is a draft of the proof that Lumines is NP-complete. It is not yet properly formatted. This particular part regards prooving that Lumines is NP-hard by reducing the Subset Sum problem to our Lumines problem}
 
 \newpage
